NXP-4284 - set JVM default memory values for Windows